Slight excel exporter refactor